--- a/Storozhilov/css/main_page.css
+++ b/Storozhilov/css/main_page.css
@@ -4,12 +4,12 @@
     font-weight: bold;
     color: #272343;
     font-size: 2.5rem;
-    font-family: proxima-nova, sans-serif;
     padding: 25px;
     display: flex;
     justify-content: space-between;
-
+    height: 5vh;
     align-items: center;
+    text-transform: uppercase;
     /* background-color: rgba(255, 0, 0, .2); */
 }
 .main_header h1 {
@@ -35,7 +35,31 @@
     background-color: #ffd803;
     transition: 0.15s;
 }
-.grid {
-    display: flex;
+.generation_header {
+    text-align: center;
+}
+main {
+    width: 75vw;
+    height: 80vh;
+    margin-top: 5px;
     justify-content: center;
+}
+main p {
+    text-align: center;
+}
+.generation_content {
+    color: red;
+    display: block;
+    border: 1px solid rgba(0,0,0,0.1);
+    height: 95%;
+    margin-bottom: 25px;
+    padding: 25px;
+}
+.generation_content h2 {
+    display: inline;
+    color: #272343;
+    font-size: 2rem;
+    font-weight: bold;
+    background-color:#ffd803;
+    padding: 15px;
 }
