--- a/Storozhilov/css/main_styles.css
+++ b/Storozhilov/css/main_styles.css
@@ -1,3 +1,11 @@
 html {
+    font-family: proxima-nova, sans-serif;
     font-size: 14px;
+}
+
+.grid {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
