--- a/Storozhilov/css/main_page.css
+++ b/Storozhilov/css/main_page.css
@@ -3,7 +3,7 @@
     width: 75vw;
     font-weight: bold;
     color: #272343;
-    font-size: 2.5rem;
+    font-size: 1.5rem;
     padding: 25px;
     display: flex;
     justify-content: space-between;
@@ -14,6 +14,8 @@
 }
 .main_header h1 {
     display: inline;
+    background-color:#ffd803;
+    padding: 15px;
     
 }
 .main_header ul {
@@ -23,16 +25,25 @@
     font-size: 1rem;
     display: inline;
 }
-.main_header a {
+.main_header ul a {
     text-decoration: none;
     color: #272343;
     padding: 15px;
     transition: 0.15s;
-    
 }
-.main_header a:hover {
+.main_header ul a:hover {
     color: #272343;
     background-color: #ffd803;
+    transition: 0.15s;
+}
+.main_header h1 a {
+    text-decoration: none;
+    color: #272343;
+    transition: 0.3s;
+}
+.main_header h1 a:hover {
+    color: #272343;
+    margin-left: 25px;
     transition: 0.15s;
 }
 .generation_header {
@@ -53,13 +64,12 @@ main p {
     border: 1px solid rgba(0,0,0,0.1);
     height: 95%;
     margin-bottom: 25px;
-    padding: 25px;
+    padding: 45px 25px 25px 25px;
 }
 .generation_content h2 {
     display: inline;
     color: #272343;
     font-size: 2rem;
     font-weight: bold;
-    background-color:#ffd803;
-    padding: 15px;
+    
 }
