--- a/css/general.css
+++ b/css/general.css
@@ -21,6 +21,12 @@ body {
     margin-bottom: 25px;
 }
 
+@media (max-width: 544px) {
+    .mainHeader {
+        padding: 15px;
+    }
+}
+
 .menu li {
     display: inline;
     text-transform: uppercase;
