--- a/css/general.css
+++ b/css/general.css
@@ -3,6 +3,12 @@
     transition-duration: .2s;
 }
 
+@media (max-width: 544px) {
+    * {
+        font-size: 12px;
+    }
+}
+
 body {
     font-family: 'Roboto', sans-serif;
     display: flex;
@@ -19,12 +25,6 @@ body {
     flex-direction: column;
     justify-content: space-around;
     margin-bottom: 25px;
-}
-
-@media (max-width: 544px) {
-    .mainHeader {
-        padding: 15px;
-    }
 }
 
 .menu li {
