--- a/css/general.css
+++ b/css/general.css
@@ -200,6 +200,7 @@ h1 {
 }
 @media (max-width: 1000px) {
     .generator {
+        width: 100%;
         flex-direction: column;
         margin-top: 0;
     }
