--- a/css/general.css
+++ b/css/general.css
@@ -266,6 +266,6 @@ h1 {
     }
     .generatorControl input[type=button] {
         width: 80%;
-        min-width: none;
+        min-width: 100px;
     }
 }
